[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "segmate"
authors = [
  { name="Marshall Wang", email="marshall.wang@vectorinstitute.ai" },
  { name="Vahid Reza Khazaie", email="vahidreza.khazaie@vectorinstitute.ai" },
]
dynamic = ["version"]

description = "SegMate package"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.22.4",
  "torch>=2.0.1",
  "datasets>=2.13.0",
  "segment_anything",
  "groundingdino",
  "pycocotools",
  "opencv-python>=4.7.0",
  "huggingface_hub",
  "matplotlib",
  "tqdm>=4.62.3",
]

[project.urls]
"Homepage" = "https://github.com/VectorInstitute/SegMate"
"Bug Tracker" = "https://github.com/VectorInstitute/SegMate/issues"

[tool.hatch.version]
path = "segmate/__init__.py"